# opengl_basics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Matrix.h  Object.h  ProgramObject.cc  ProgramObject.h  Shape.h  Window.cc  Window.h  main.cc  main.h  point.frag  point.vert
